--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,9 @@
 .f-25{
     flex-basis: 25%;
 }
+.f-100{
+    flex-basis: 100%!important;
+}
 .t-center{
     text-align: center;
 }
@@ -83,6 +86,7 @@
 .board_left{
     flex-basis: 35%;
     border-right: 1px solid var(--color-light-gray);
+    transition: all .23s;
 }
 
 .top_board{
@@ -91,6 +95,7 @@
     align-items: center;
     width: 100%;
     border-bottom: 1px solid var(--color-light-gray);
+    background-color: var(--color-white);
 }
 .item_top_board{
     padding: 0 10px;
@@ -102,8 +107,11 @@
     height: calc(100% - 70px);
     display: flex;
 }
-.menu_chat, .list_contact{
-    flex-basis: 50%;
+.menu_chat {
+    flex-basis: 30%;    
+}
+.list_contact{
+    flex-basis: 70%;
     height: 100%;
 }
 .menu_chat_content{
@@ -116,6 +124,7 @@
     height: 50px;
     align-items: center;
     padding: 10px;
+    border-bottom: 1px solid var(--color-light-gray);
 }
 .search_contacts i{
     margin-right: 10px;
@@ -157,7 +166,7 @@
 }
 .list_menu_chat li a{
     color: var(--color-main);
-    font-size: 1.2em;
+    font-size: 1em;
     padding: 10px;
     width: 100%;
 }
@@ -173,6 +182,7 @@
 .contact_single{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 10px;
     border-bottom: 1px solid var(--color-light-gray);
     cursor: pointer;
@@ -181,7 +191,22 @@
 .contact_single:hover{
     background-color: var(--color-hover);
 }
-.contact_single img{
+.contact_single img, .contact_single .thumbname{
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.thumbname{
+    background-color: var(--color-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3em;
+    color: var(--color-white);
+}
+.photo_chat .thumbname{
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -220,7 +245,7 @@
     border-bottom: 1px solid var(--color-light-gray);
 }
 .contact_single_info h4{
-    font-size: 1em;
+    font-size: .95em;
     font-weight: 500;
     margin-bottom: 5px;
 }
@@ -246,6 +271,7 @@
 /* right board */
 .board_right{
     flex-basis: 65%;
+    transform: all .23s;
 }
 
 .icons_chat_active span, .item_top_board span{
@@ -273,6 +299,7 @@
 .send_msg_board{
     height: 10%;
     width: 100%;
+    background-color: var(--color-white);
 }
 .content_msg{
     height: 90%;
@@ -354,6 +381,10 @@
     cursor: pointer;
     margin-right: 10px;
 }
+.menu_chat_open{
+    flex-basis: 0%;
+    overflow: hidden;
+}
 
 
 
@@ -382,6 +413,61 @@
 }
 /* msg */
 
+#open_menu_desktop{
+    transform: rotate(180deg);
+    transition: all .23s;
+}
+.reto{
+    transform: rotate(0deg)!important;
+}
+
+/* chat mobile */
+
+#open_menu_icon_chat{
+    display: none;
+    padding: 10px;
+    cursor: pointer;
+}
+.push_row{
+    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+}
+.push{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: right;
+    max-width: 30%;
+}
+.push_new{
+    background-color: var(--color-red);
+    color: var(--color-white);
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-size: .6em;
+    margin: 2px 0;
+}
+.push_new_green{    
+    background-color: var(--color-green);
+    color: var(--color-white);
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-size: .6em;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2px 0;
+    margin-left: 5px;
+}
+.user_type{
+    font-size: .7em;
+    color: var(--color-blue);
+}
+/* chat mobile */
+
 @media(max-width: 1150px){
     #open_menu{
         display: flex;
@@ -405,11 +491,15 @@
         position: absolute;
         top: 0;
         left: 0;
+        max-width: 400px;
         width: auto;
         height: 100%;
         background-color: var(--color-white);
         box-shadow: 2px 0px 10px #222;
         z-index: 1;
+    }
+    #open_menu_desktop{
+        display: none;
     }
 }
 
@@ -423,5 +513,57 @@
     }
     .return_contacts{
         display: flex;
+    }
+    .icons_chat_active{
+        display: none;
+    }
+    #open_menu_icon_chat{
+        display: block;
+    }
+    .icons_chat_active{
+        position: absolute;
+        top: 0;
+        right: 0;
+        flex-direction: column;
+        background-color: var(--color-white);
+        border-radius: 0 0 0 5px;
+        box-shadow: 2px 2px 10px #222;
+        z-index: 10;
+    }
+    .icons_chat_active_open{
+        display: flex;
+    }
+    .open_over_open{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+    }
+    .content_input_msg{
+        min-height: 60px;
+    }
+    .input_msg_field{
+        flex-basis: 65%;
+    }
+    .icons_input_msg{
+        flex-basis: 6%;
+    }
+    .input_msg_field textarea{
+        font-size: 1em;
+    }
+    .board_left_mobile{
+        position: relative;
+        left: -100%;
+        width: 100%;
+    }
+    .board_right_mobile{
+        position: fixed;
+        left: 0;
+        flex-basis: 100%!important;
+        display: block!important;
+        width: 100%;
+        height: 100%;
     }
 }
